// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Тестируем компонент Button Кнопка без текста и в состоянии disabled рендерится без ошибок 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  data-testid="button-test"
  disabled={true}
  type="button"
>
  <p
    className="text undefined"
  >
    
  </p>
</button>
`;

exports[`Тестируем компонент Button Кнопка с пропсами рендерится без ошибок 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false extra-class"
  data-testid="button-test"
  disabled={false}
  type="button"
>
  <p
    className="text undefined"
  >
    Text
  </p>
</button>
`;
